# LangChain-RAG-FastAPI-Service

./: .gitignore  README.md  SETUP_CHECKLIST.md  docker-compose.override.yml  docker-compose.yml  skills-lock.json  企业级RAG合规审查报告-v2.html  企业级RAG合规审查报告.html  针对特定问题的记录.md
DjangoUserService/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
DjangoUserService/DjangoUserService/: settings.py
DjangoUserService/apps/file/: views.py
DjangoUserService/apps/user/: models.py  views.py
DjangoUserService/apps/user/migrations/: 0001_initial.py
backend/: .dockerignore  .env.example  CODE_REVIEW_KISS.md  Dockerfile  docker-compose.milvus.yml  main.py  pyproject.toml  requirements.txt
backend/app/agent/: agent.py  agent_tools.py  graph.py  state.py
backend/app/agent/meta_tools/: __init__.py  create_plan.py  evaluate_step_result.py  update_plan.py
backend/app/agent/nodes/: __init__.py  execute.py  execution.py  planning.py  summarization.py
backend/app/agent/tools/: __init__.py  keyword_search.py  metadata_filter_milvus.py  ocr.py  sql_query.py  time.py  vector_search.py  weather.py
backend/app/config/: chroma.yaml  rag.yaml
backend/app/core/: failed_response.py  rate_limit.py
backend/app/db/: redis_config.py
backend/app/models/: chat_history.py  feedback.py
backend/app/prompt/: rag_summarize.txt  system_prompt.yaml  tool_xml.py
backend/app/rag/: image_embedder.py  milvus_store.py  multi_factor_ranker.py  query_processor.py  rag_service.py  reorder_service.py  task_queue.py  text_spliter.py  vector_store.py
backend/app/rag/document_handler/: code_processor.py  excel_processor.py  format_preserver.py  ocr_processor.py  processor.py  type_router.py
backend/app/rag/feedback/: __init__.py  feedback_service.py
backend/app/router/: chat.py  chat_service.py  feedback_router.py  health.py  knowledge_router.py  knowledge_service.py
backend/app/schemas/: models.py
backend/app/services/: database_session_manager.py
backend/app/utils/: auth_utils.py  config.py  factory.py  file_handler.py  image_extractor.py  language_detector.py  pdf_heading_detector.py  pdf_multimodal_loader.py  prompt_loader.py  retry.py  vision_service.py
backend/tests/: conftest.py  test_bm25_chinese.py  test_code_processor.py  test_e2e.py  test_excel_processor.py  test_feedback.py  test_format_preserver.py  test_lang_metadata_integration.py  test_language_detection.py  test_pdf_headings.py  test_ppt_aggregation.py  test_retrieval.py  test_text_spliter.py
backend/tests/integration/: conftest.py  test_agent_basic.py  test_q01_q05_basic.py  test_q06_q10_multihop.py  test_q11_q14_compare.py  test_q15_q17_temporal.py  test_q18_q20_entity.py  test_q21_q23_negative.py  test_q24_q26_decompose.py  test_q27_q28_hyde.py  test_q29_q30_format.py
backend/tests/smoke/: test_sse_stream.py
backend/tests/unit/: test_graph_prompt.py  test_meta_tools.py  test_metadata_filter.py  test_ocr.py  test_sql_query.py  test_time.py  test_vector_keyword.py  test_weather.py
docs/: 企业级 RAG.md  (+6 more)
(+122 files in other folders)
