[project]
name = "DjangoUserService"
version = "0.1.0"
description = "Django User Service"
authors = [
    { name = "RMA-MUN", email = "n3032747608@163.com" },
]
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.0",
    "PyMySQL>=1.1.3",
    "djangorestframework>=3.17.0",
    "djangorestframework-simplejwt>=5.3.1",
    "django-cors-headers>=4.3.0",
    "celery>=5.6.0",
    "redis>=7.4.0",
    "django-redis>=5.4.0",
    "python-dotenv>=1.2.0",
    "uvicorn>=0.49.0",
    "asgiref>=3.11",
    "drf-yasg>=1.21.15",
    "django-shortuuidfield>=0.1.3",
    "pillow>=12.1.1",
    "mysqlclient>=2.2.8",
    "mysql-connector-python>=9.6.0",
    "drf-spectacular>=0.29.0",
    "cryptography>=49.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["DjangoUserService", "apps"]

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
index-url = "https://pypi.org/simple/"
