[project]
name = "backend"
version = "0.1.0"
description = "A FastAPI + LangChain project for LLM applications"
requires-python = ">=3.12"
authors = [
    { name = "RMA-MUN", email = "n3032747608@163.com" }
]
dependencies = [
    "python-dotenv>=1.2.2",
    "SQLAlchemy>=2.0.49",
    "langchain-core>=1.4.0",
    "langchain>=1.3.0",
    "aiofiles>=25.1.0",
    "fastapi>=0.137.0",
    "starlette>=1.1.0",
    "pydantic-settings>=2.14.0",
    "python-jose>=3.5.0",
    "PyYAML>=6.0.3",
    "pydantic>=2.13.0",
    "requests>=2.32.5",
    "uvicorn>=0.49.0",
    "aiomysql>=0.3.2",
    "greenlet>=3.0.0",
    "redis>=7.3.0",
    "python-multipart>=0.0.22",
    "dashscope>=1.25.14",
    "pypdf>=6.9.2",
    "python-magic>=0.4.27",
    "sentence-transformers>=5.5.0",
    "modelscope>=1.35.3",
    "accelerate>=1.13.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "torchaudio>=2.11.0",
    "unstructured[all-docs]>=0.22.28",
    "langsmith>=0.8.0",
    "langgraph-cli[inmem]>=0.1.54",
    "rank-bm25>=0.2.2",
    "pymupdf>=1.27.0",
    "pillow>=10.0.0",
    "imagehash>=4.3.0",
    "openai>=2.0.0",
    "langgraph>=1.2.0",
    "pymilvus>=2.4.0",
    "huggingface_hub>=0.20.0",
    "paddleocr>=2.7.0",
    "jieba>=0.42",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "tree-sitter>=0.21.0",
    "pdf2image>=1.16.0",
]

# 开发依赖
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "ruff>=0.3.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true

[tool.uv]
index-url = "https://pypi.org/simple/"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring running services",
    "db: tests requiring database connection",
    "slow: slow tests (model loading)",
]
addopts = "-v --tb=short"
